[add] menu-mobile

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
 
       <!-- Nav desktop section -->
       <nav class="header__nav">
+        <figure class="header__iconClose">
+          <img src="../images/icon-close-menu.svg" alt="icon-close-menu">
+        </figure>
         <ul class="header__nav--ul">
           <li>
             <span>Features</span>
@@ -56,11 +59,11 @@
       </figure>
     </header>
 
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Antonio Espin</a>.
-    </div>
   </main>
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Antonio Espin</a>.
+  </div>
   
   
   
