[add] media queries

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
 </head>
 <body>
   <main> 
+    <div class="shadow inactive"></div>
+
     <header class="header">
       <figure class="header__logo">
         <img src="../images/logo.svg" alt="logo">
@@ -73,26 +75,40 @@
       </figure>
     </header>
 
+    <section class="container">
+      <!-- hero section (start) -->
+      <section class="hero">
+        <figure class="hero__img">
+          <img src="../images/image-hero-mobile.png" alt="image-hero-mobile">
+        </figure>
+      </section>
+      <!-- hero section (end) -->
+  
+      <!-- Info section (start) -->
+      <section class="infoSection">
+        <div class="infoSection__container">
+          <h1 class="infoSection__container--title">Make remote work</h1>
+          <p class="infoSection__container--phrase">Get your team in sync, no matter your location. Streamline processes,
+          create team rituals, and watch productivity soar.</p>
+          <button class="infoSection__container--button">Learn more</button>
+        </div>
+
+        <div class="logosSection">
+          <a href="/"><img src="../images/client-databiz.svg" alt="client-databiz"></a>
+          <a href="/"><img src="../images/client-audiophile.svg" alt="client-audiophile"></a>
+          <a href="/"><img src="../images/client-meet.svg" alt="client-meet"></a>
+          <a href="/"><img src="../images/client-maker.svg" alt="client-maker"></a>
+        </div>
+      </section>
+      <!-- Info section (end) -->
+    </section>
+
   </main>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Antonio Espin</a>.
   </div>
-  
-  
-  
-  
-  
-  
-<!--   
-  
-  Make remote work
-  
-  Get your team in sync, no matter your location. Streamline processes,
-  create team rituals, and watch productivity soar.
-  
-  Learn more -->
-  
   
   <script src="../src/index.js"></script>
 </body>
