--- a/public/index.html
+++ b/public/index.html
@@ -78,9 +78,10 @@
     <section class="container">
       <!-- hero section (start) -->
       <section class="hero">
-        <figure class="hero__img">
+        <picture class="hero__img">
+          <source srcset="../images/image-hero-desktop.png" media="(min-width: 809px)">
           <img src="../images/image-hero-mobile.png" alt="image-hero-mobile">
-        </figure>
+        </picture>
       </section>
       <!-- hero section (end) -->
   
